infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dietas-web
  namespace: dietas
  labels:
    app: dietas-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dietas-web
  template:
    metadata:
      labels:
        app: dietas-web
    spec:
      containers:
        - name: web
          image: ghcr.io/erickaguirre130294/avante-dietas-v2:latest # ArgoCD/Kustomize fija el tag
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/auth/session
              port: 3000
            initialDelaySeconds: 8
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/auth/session
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: 256Mi
            limits:
              memory: 512Mi
